[tool.poetry]
name = "python-quickstart"
version = "0.1.0"
description = ""
authors = ["Alan Gerber <akgerber@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_quickstart"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
